# harry_agents

./: .gitignore  README.md  config.toml  config.toml.example  feishu_bot.py  main.py  memory_manager.py  multi-agent-system.md  orchestrator.py  package-lock.json  package.json  pyproject.toml  requirements.txt  state_machine.py
.claude/agents/: deploy.md  design.md  dev_backend.md  dev_frontend.md  pm.md  test.md
agents/: __init__.py  base_agent.py  deploy_agent.py  design_agent.py  dev_agent.py  pm_agent.py  test_agent.py
memory/: facts.md
src/: config.ts  feishu_bot.ts  main.ts  memory_client.ts  memory_manager.ts  orchestrator.ts  state_machine.ts
src/agents/: base_agent.ts  deploy_agent.ts  design_agent.ts  dev_agent.ts  pm_agent.ts  test_agent.ts
tools/: challenge_server.py
