[project]
name = "multi-agent-system"
version = "0.1.0"
description = "多 Agent 协作自动化软件开发系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "lark-oapi>=1.3.0",
    "chromadb>=0.5.0",
    "toml>=0.10.2",
    "aiohttp>=3.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0",
]
